--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://dmego.cn" class="blog-button" target="_blank">博客</a>
+                                        <a href="https://dmego.cn" class="blog-button" target="_blank">ChatGPT镜像</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://r.dmego.cn" class="blog-button" target="_blank">简历</a>
+                                        <a href="https://r.dmego.cn" class="blog-button" target="_blank">导航站</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://dmego.cn/about/" class="blog-button" target="_blank">关于</a>
+                                        <a href="https://dmego.cn/about/" class="blog-button" target="_blank">捐赠</a>
                                     </li>
                                 </ul>
                             </nav>
