--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         <a href="https://r.dmego.cn" class="blog-button" target="_blank">导航站</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://dmego.cn/about/" class="blog-button" target="_blank">捐赠</a>
+                                        <a href="https://donate.zhangmonday.top" class="blog-button" target="_blank">捐赠</a>
                                     </li>
                                 </ul>
                             </nav>
