--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
                                         <a href="https://r.dmego.cn" class="blog-button" target="_blank">导航站</a>
                                     </li>
                                     <li class="navigation__item">
+                                        <a href="https://donate.zhangmonday.top" class="blog-button" target="_blank">实体店红包</a>
+                                    </li>
+                                    <li class="navigation__item">
                                         <a href="https://donate.zhangmonday.top" class="blog-button" target="_blank">捐赠</a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="https://donate.zhangmonday.top" class="blog-button" target="_blank">别点</a>
                                     </li>
                                 </ul>
                             </nav>
