--- a/index.html
+++ b/index.html
@@ -62,20 +62,18 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://dmego.cn" class="blog-button" target="_blank">ChatGPT镜像</a>
+                                        <a href="https://chatnio.zhangmonday.top" class="blog-button" target="_blank">ChatGPT镜像</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://r.dmego.cn" class="blog-button" target="_blank">导航站</a>
+                                        <a href="https://daohang.zhangmonday.top" class="blog-button" target="_blank">传送门</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://donate.zhangmonday.top" class="blog-button" target="_blank">实体店红包</a>
+                                        <a href="https://hongbao.zhangmonday.top" class="blog-button" target="_blank">实体店红包</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://donate.zhangmonday.top" class="blog-button" target="_blank">捐赠</a>
                                     </li>
-                                    <li class="navigation__item">
-                                        <a href="https://donate.zhangmonday.top" class="blog-button" target="_blank">别点</a>
-                                    </li>
+                                    
                                 </ul>
                             </nav>
                         </div>
