--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     </h2>
                                     <p>
                                         
-                                            2023 · 突破
+                                            2024 · 中考加油
                                         
                                     </p>
                                 </div>
@@ -62,7 +62,7 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://chatnio.zhangmonday.top" class="blog-button" target="_blank">ChatGPT镜像</a>
+                                        <a href="https://chatgpt.zhangmonday.top" class="blog-button" target="_blank">ChatGPT镜像</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://daohang.zhangmonday.top" class="blog-button" target="_blank">传送门</a>
