--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         <a href="https://chatgpt.zhangmonday.top" class="blog-button" target="_blank">ChatGPT镜像</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://daohang.zhangmonday.top" class="blog-button" target="_blank">传送门</a>
+                                        <a href="#" class="blog-button" target="_blank">传送门(维护中)</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://hongbao.zhangmonday.top" class="blog-button" target="_blank">实体店红包</a>
