--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div> -->
         <div class="remark iUp">
             <p class="power">By 
-                <a href="https://zhangmonday.top" target="_blank"> zzy </a>
+                <a href="https://zhangmonday.top" target="_blank"> zzy wqr</a>
             </p>
         </div>
     </header>
