--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     </h2>
                                     <p>
                                         
-                                            2024 · 高中新起点
+                                            2025 · 打赢高中持久战
                                         
                                     </p>
                                 </div>
